# tm-grammar

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
.github/: build_all.sh
.github/workflows/: build-package.yml  build-wheels.yml  wheel.yml
tmGrammar/: __init__.py  tmGrammar.i
