[metadata]
name = tm-grammar
description = Python bindings for tmGrammar.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
url = https://github.com/cms-l1-globaltrigger/tm-grammar
license = GPLv3

[options]
python_requires = >=3.9
